--- a/portfolio.html
+++ b/portfolio.html
@@ -110,6 +110,18 @@
 			.demo2:hover, .demo2:hover, .demo4:hover, .demo5:hover {
 			  opacity: 1;
 			}
+			
+			a:link {
+			  text-decoration: none;
+			}
+			a:visited {
+			  color : black;
+			  text-decoration: none;
+			}
+			a:hover {
+			  text-decoration: underline;
+			}
+			
         </style>
     </head>
     <body>
@@ -370,7 +382,7 @@
 								<br><b>- 팀원수 :</b> 1명
 								<br><b>- 소요시간 :</b> 3주
 								<br><b>- 사용언어 :</b> HTML/CSS
-								<br><b>- GitHub :</b> https://github.com/Chisoomin/etc/tree/main/.github/workflows</p>
+								<br><b>- GitHub :</b> <a href="https://github.com/Chisoomin/etc/tree/main/.github/workflows">https://github.com/Chisoomin/etc/tree/main/.github/workflows</a></p>
 								<hr>
 								<p>
 									저에 대한 간략한 소개와 좋아하는 영화나 가수 등이 이미지와 함께 설명되어 있습니다. 또한 가족에 대한 인물 소개와 그에 상응하는 이미지 파일이 보여집니다.<br><br>
@@ -474,8 +486,8 @@
 								<br><b>- 팀원수 :</b> 1명
 								<br><b>- 소요시간 :</b> 1개월
 								<br><b>- 사용언어 :</b> JAVA, XML, SQL
-								<br><b>- GitHub :</b> https://github.com/Chisoomin/forGomsin
-								<br><b>- 시연영상 :</b> https://www.youtube.com/watch?v=yQX46FcQM2c</p>
+								<br><b>- GitHub :</b> <a href="https://github.com/Chisoomin/forGomsin">https://github.com/Chisoomin/forGomsin</a>
+								<br><b>- 시연영상 :</b> <a href="https://www.youtube.com/watch?v=yQX46FcQM2c">https://www.youtube.com/watch?v=yQX46FcQM2c</a></p>
 								<hr>
 								<p>
 									주변에 군대 간 남자친구를 둔 친구들, 즉 고무신들이 많아지면서 전역일 계산에 어려움을 토로하는 사람들이 여럿이 있었기 때문에 개발을 생각하게 되었습니다.<br><br>
@@ -661,8 +673,8 @@
 								<br><b>- 팀원수 :</b> 5명 → 3명
 								<br><b>- 소요시간 :</b> 8개월
 								<br><b>- 사용언어 :</b> JAVA, XML, SQL
-								<br><b>- GitHub :</b> https://github.com/Chisoomin/DoDam
-								<br><b>- 시연영상 :</b> https://www.youtube.com/watch?v=4pgAIYISrI4</p>
+								<br><b>- GitHub :</b> <a href="https://github.com/Chisoomin/DoDam">https://github.com/Chisoomin/DoDam</a>
+								<br><b>- 시연영상 :</b> <a href="https://www.youtube.com/watch?v=4pgAIYISrI4">https://www.youtube.com/watch?v=4pgAIYISrI4</a></p>
 								<hr>
 								<p>
 									코로나 블루 등으로 최근 계속해서 높아지는 우울감을 낮추기 위해 심리 상태를 진단하고 치유하며, 내면의 부정적인 면과 스트레스의 해소가 필요하므로 이를 해결하기 위해 개발하게 되었습니다.<br><br>
@@ -825,8 +837,8 @@
 								<br><b>- 팀원수 :</b> 1명
 								<br><b>- 소요시간 :</b> 1개월
 								<br><b>- 사용언어 :</b> JAVA, SQL, XML
-								<br><b>- GitHub :</b> https://github.com/Chisoomin/MY_REVIEWs
-								<br><b>- 시연영상 :</b> https://www.youtube.com/watch?v=4pVXTngfQ2s
+								<br><b>- GitHub :</b> <a href="https://github.com/Chisoomin/MY_REVIEWs">https://github.com/Chisoomin/MY_REVIEWs</a>
+								<br><b>- 시연영상 :</b> <a href="https://www.youtube.com/watch?v=4pVXTngfQ2s">https://www.youtube.com/watch?v=4pVXTngfQ2s</a>
 								</p>
 								<hr>
 								<p>
@@ -936,7 +948,8 @@
 								<br><b>- 팀원수 :</b> 5명
 								<br><b>- 소요시간 :</b> 4개월
 								<br><b>- 사용언어 :</b> JAVA, SQL, HTML/CSS, JS
-									<br><b>- GitHub :</b> <a href="https://github.com/Chisoomin/MJF_ERP">https://github.com/Chisoomin/MJF_ERP</a></p>
+								<br><b>- GitHub :</b> <a href="https://github.com/Chisoomin/MJF_ERP">https://github.com/Chisoomin/MJF_ERP</a>
+								<br><b>- 시연영상 :</b> <a href="https://youtu.be/2zu2YRKps_0">https://youtu.be/2zu2YRKps_0</a></p>
 								<hr>
 								<p>
 									ERP는 enterprise resource planning의 약어로 경영 정보 시스템의 한 종류입니다.<br><br>
