--- a/portfolio.html
+++ b/portfolio.html
@@ -954,7 +954,7 @@
 								<p>
 									ERP는 enterprise resource planning의 약어로 경영 정보 시스템의 한 종류입니다.<br><br>
 									ERP는 전사적 자원 관리는 회사의 모든 정보 뿐만 아니라, 공급 사슬관리, 고객의 주문정보까지 포함하여 통합적으로 관리하는 시스템입니다.<br><br>
-									그 중에서도 영업관리 프로세스를 아 수주 등록부터 매출 관리까지 구현하였습니다. 기업에서 사용하는 경영 시스템을 직접 구현해 보았다는 것에서 가장 의미있는 작업물이었습니다.
+									그 중에서도 영업관리 프로세스를 맡아 수주 등록부터 매출 관리까지 구현하였습니다. 기업에서 사용하는 경영 시스템을 직접 구현해 보았다는 것에서 가장 의미있는 작업물이었습니다.
 								</p>
 								<button onclick = "location.href = 'https://github.com/Chisoomin/MJF_ERP'" style="outline:none;border:none; border-radius:10px;width:140px; height:40px; background-color:#2B1700; color:white;">README ▶</button>
 							</div>
