--- a/portfolio.html
+++ b/portfolio.html
@@ -137,7 +137,7 @@
                         <li class="nav-item"><a class="nav-link" href="#section_AM">ABOUT ME</a></li>
                         <li class="nav-item"><a class="nav-link" href="#section_SK">SKILLS</a></li>
                         <li class="nav-item"><a class="nav-link" href="#section_PR">PROJECTS</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#section_AR">ARCHIVING</a></li>
+                        <!--<li class="nav-item"><a class="nav-link" href="#section_AR">ARCHIVING</a></li>-->
                     </ul>
                 </div>
             </div>
