--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
         <link rel="icon" type="image/x-icon" href="images/soom.png" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+	<script src="http://code.jquery.com/jquery-latest.js"></script>
         <style>
         	@import url(//fonts.googleapis.com/earlyaccess/jejugothic.css);
 
@@ -122,6 +123,17 @@
 			a:hover {
 			  text-decoration: underline;
 			}
+
+			html,
+			body {
+				width: 100%;
+				height: 100%;
+			}
+			#section_home
+			{
+				width: 100%;
+        			height: 100%;
+			}
 			
         </style>
     </head>
@@ -143,14 +155,14 @@
             </div>
         </nav>
         <!-- Header - set the background image for the header in the line below-->
-        <header class="py-5 bg-image-full" style="background-image:url('images/code.png'); background-attachment:fixed;">
-            <div class="text-center my-5">
+        <header id="section_home" class="py-5 bg-image-full" style="background-image:url('images/code.png'); background-attachment:fixed;">
+            <div class="text-center" style="margin-top: 10%;">
                 <img class="img-fluid rounded-circle mb-4" src="images/soom.png" alt="..." style="width:200px; height:200px;" />
                 <h1 class="text-white fw-bolder hana_font" style="font-size:30px;">"지&nbsp;&nbsp;수&nbsp;&nbsp;민"<br>포&nbsp;&nbsp;트&nbsp;&nbsp;폴&nbsp;&nbsp;리&nbsp;&nbsp;오</h1>
                 <p class="mb-0" style="font-size:22px;--bs-text-opacity: 1; color: rgba(255, 255, 255, 0.7); letter-spacing:2px">STEADY STUDY, DEVELOPING KNOWLEDGE</p><br>
                 <p class="text-white-50 mb-0" style="font-size:19px;">안녕하세요, 좋은 개발자를 위해 노력하는 개발자입니다.<br>꼼꼼하고 맡은 바 강한 책임감을 갖는 성격이 장점입니다.</p>
             	<br>
-            	<input type="button" value="자세히 보기 ↓" onclick = "location.href = '#section_AM'" style="width: 180px; height:45px; border-radius:20px; background-color:#868e96; border:none; outline:none; color:white "/>
+            	<input type="button" value="SCROLL DOWN ⇣" onclick = "location.href = '#section_AM'" style="width: 180px; height:45px; border-radius:20px; margin-top:10%; background-color:rgb(128, 64, 64,0); border:none; outline:none; color:black; font-weight: 900;"/>
             </div>
         </header>
         <!-- Content section-->
@@ -1134,5 +1146,24 @@
 	          dots5[slideIndex5-1].className += " active";
 	        }
         </script>
+	<script>
+		var mHtml = $("html");
+		var page = 1;
+
+
+		mHtml.animate({scrollTop : 0},10);
+		$(window).on("wheel", function(e) {
+			if(mHtml.is(":animated")) return;
+			if(e.originalEvent.deltaY > 0) {
+				if(page == 2) return;
+				page++;
+			} else if(e.originalEvent.deltaY < 0) {
+				if(page == 1) return;
+				page--;
+			}
+			var posTop =(page-1) * $(window).height();
+			mHtml.animate({scrollTop : posTop});
+		})
+	</script>
     </body>
 </html>
