--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
         <link rel="icon" type="image/x-icon" href="images/soom.png" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
-	<script src="http://code.jquery.com/jquery-latest.js"></script>
+	<script src="js/jquery-latest.js"></script>
         <style>
         	@import url(//fonts.googleapis.com/earlyaccess/jejugothic.css);
 
