--- a/portfolio.html
+++ b/portfolio.html
@@ -1160,8 +1160,8 @@
 			} /*else if(e.originalEvent.deltaY < 0) {
 				if(page == 1) return;
 				page--;
-			}
-			var posTop =(page-1) * $(window).height();*/
+			}*/
+			var posTop =(page-1) * $(window).height();
 			mHtml.animate({scrollTop : posTop});
 		})
 	</script>
