--- a/portfolio.html
+++ b/portfolio.html
@@ -1155,15 +1155,14 @@
 		$(window).on("wheel", function(e) {
 			if(mHtml.is(":animated")) return;
 			if(e.originalEvent.deltaY > 0) {
-				//if(page == 2) return;
+				if(page == 2) return;
 				page++;
 			} else if(e.originalEvent.deltaY < 0) {
-				//if(page == 1) return;
-				if(page>0){
-					page--;
-				}
+				if(page == 1) return;
+				page--;
+					
 			}
-			if(page==2 || page==1){
+			if(page==2){
 				var posTop =(page-1) * $(window).height();
 				mHtml.animate({scrollTop : posTop});
 			}
