--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -162,7 +162,7 @@
                 <p class="mb-0" style="font-size:22px;--bs-text-opacity: 1; color: rgba(255, 255, 255, 0.7); letter-spacing:2px">STEADY STUDY, DEVELOPING KNOWLEDGE</p><br>
                 <p class="text-white-50 mb-0" style="font-size:19px;">안녕하세요, 좋은 개발자를 위해 노력하는 개발자입니다.<br>꼼꼼하고 맡은 바 강한 책임감을 갖는 성격이 장점입니다.</p>
             	<br>
-            	<input type="button" value="SCROLL DOWN ⇣" onclick = "location.href = '#section_AM'" style="width: 180px; height:45px; border-radius:20px; margin-top:10%; background-color:rgb(128, 64, 64,0); border:none; outline:none; color:black; font-weight: 900;"/>
+            	<input type="button" value="SCROLL DOWN ⇣" onclick = "location.href = '#section_AM'" style="width: 180px; height:45px; border-radius:20px; margin-top:10px; background-color:rgb(128, 64, 64,0); border:none; outline:none; color:black; font-weight: 900;"/>
             </div>
         </header>
         <!-- Content section-->
