--- a/portfolio.html
+++ b/portfolio.html
@@ -1146,7 +1146,7 @@
 	          dots5[slideIndex5-1].className += " active";
 	        }
         </script>
-	/*<script>
+	<!--<script>
 		var mHtml = $("html");
 		var page = 1;
 
@@ -1167,6 +1167,6 @@
 				mHtml.animate({scrollTop : posTop});
 			}
 		})
-	</script>*/
+	</script>-->
     </body>
 </html>
