--- a/portfolio.html
+++ b/portfolio.html
@@ -684,6 +684,7 @@
 							<div style="float:left; width:455px; height:725px;margin-left:16px;overflow:scroll">
 								<p style="font-size:20px;word-break:break-all;"><b>- 주요기능 :</b> 인공지능(AI)과 빅데이터를 활용한 심리를 파악, 감정에 따른 음악 목록을 추천, 식물의 성장으로 사용자의 성장 확인, 미니 게임
 								<br><b>- 팀원수 :</b> 5명 → 3명
+								<br><b>- 기여도 및 담당업무 :</b> 50%, PM의 역할을 맡아 앱의 모든 기능을 파악 후 역학 분배. 서버 연결과 인공지능 api 활용, 여러 라이브러리를 활용한 Habit Tracker 등 많은 기능 구현을 담당
 								<br><b>- 소요시간 :</b> 8개월
 								<br><b>- 사용언어 :</b> JAVA, XML, SQL
 								<br><b>- GitHub :</b> <a href="https://github.com/Chisoomin/DoDam">https://github.com/Chisoomin/DoDam</a>
@@ -959,6 +960,7 @@
 							<div style="float:left; width:455px;margin-left:16px;">
 								<p style="font-size:20px;word-break:break-all;"><b>- 주요기능 :</b> ERP 영업관리 프로세스
 								<br><b>- 팀원수 :</b> 5명
+								<br><b>- 기여도 및 담당업무 :</b> 60%, PM을 맡아 소통을 통해 팀원들의 역할 조정과 기한 엄수를 하였고, 영업관리 프로세스 중 매출 관리 부분을 맡아 등록된 수주 목록을 불러와 매출로 분류하여 세금 계산서와 그래프로 매출 기록을 나타내는 부분을 담당
 								<br><b>- 소요시간 :</b> 4개월
 								<br><b>- 사용언어 :</b> JAVA, SQL, HTML/CSS, JS
 								<br><b>- GitHub :</b> <a href="https://github.com/Chisoomin/MJF_ERP">https://github.com/Chisoomin/MJF_ERP</a>
