--- a/portfolio.html
+++ b/portfolio.html
@@ -871,7 +871,7 @@
                         		<h2>ERP business management</h2>
                         		<p>2022. 09 - 2022. 12</p>
                         	</div>
-                        	<div class="containerr" style="width:455px; height:575px; background-color:gray; float:left;">
+                        	<div class="containerr" style="width:455px; height:575px; background-color:gray; float:left;overflow:scroll">
 	                        	<div style="transform:translate(0%, 166px)">
 	                        		  <div class="mySlides2" >
 									    <div class="numbertext">1 / 9</div>
