--- a/portfolio.html
+++ b/portfolio.html
@@ -957,7 +957,7 @@
 							  
 							  </div>
 							</div>
-							<div style="float:left; width:455px;margin-left:16px;">
+							<div style="float:left; width:455px;margin-left:16px;overflow:scroll">
 								<p style="font-size:20px;word-break:break-all;"><b>- 주요기능 :</b> ERP 영업관리 프로세스
 								<br><b>- 팀원수 :</b> 5명
 								<br><b>- 기여도 및 담당업무 :</b> 60%, PM을 맡아 소통을 통해 팀원들의 역할 조정과 기한 엄수를 하였고, 영업관리 프로세스 중 매출 관리 부분을 맡아 등록된 수주 목록을 불러와 매출로 분류하여 세금 계산서와 그래프로 매출 기록을 나타내는 부분을 담당
