--- a/portfolio.html
+++ b/portfolio.html
@@ -412,7 +412,7 @@
                         		<h2>FOR 곰신</h2>
                         		<p>2020. 11 - 2020. 12</p>
                         	</div>
-                        	<div class="containerr" style="width:455px; height:725px; background-color:gray; float:left;overflow:scroll">
+                        	<div class="containerr" style="width:455px; height:725px; background-color:gray; float:left;overflow:scroll;">
 	                        	<div >
 	                        		<div style="transform:translate(68px, 0%)">
 	                        		  <div class="mySlides3" >
@@ -519,7 +519,7 @@
                         		<h2>도담도담(DoDaM-DoDaM)</h2>
                         		<p>2021. 03 - 2021. 11</p>
                         	</div>
-                        	<div class="containerr" style="width:455px; height:725px; background-color:gray; float:left;overflow:scroll">
+                        	<div class="containerr" style="width:455px; height:725px; background-color:gray; float:left;overflow:scroll;">
 	                        	<div >
 	                        		<div style="transform:translate(68px, 0%)">
 	                        		  <div class="mySlides4" >
@@ -846,7 +846,7 @@
 							  
 							  </div>
 							</div>
-							<div style="float:left; width:455px; height:725px;margin-left:16px; overflow:scroll">
+							<div style="float:left; width:455px; height:725px;margin-left:16px; overflow:scroll;">
 								<p style="font-size:20px;word-break:break-all;"><b>- 주요기능 :</b> 네이버 검색 api를 활용한 영화 검색, 영화 즐겨찾기, 영화에 대한 평론 작성 및 확인, 영화 추천
 								<br><b>- 팀원수 :</b> 1명
 								<br><b>- 소요시간 :</b> 1개월
@@ -871,7 +871,7 @@
                         		<h2>ERP business management</h2>
                         		<p>2022. 09 - 2022. 12</p>
                         	</div>
-                        	<div class="containerr" style="width:455px; height:575px; background-color:gray; float:left;overflow:scroll">
+                        	<div class="containerr" style="width:455px; height:575px; background-color:gray; float:left;">
 	                        	<div style="transform:translate(0%, 166px)">
 	                        		  <div class="mySlides2" >
 									    <div class="numbertext">1 / 9</div>
@@ -957,7 +957,7 @@
 							  
 							  </div>
 							</div>
-							<div style="float:left; width:455px;margin-left:16px;overflow:scroll">
+							<div style="float:left; width:455px;margin-left:16px;overflow:scroll;">
 								<p style="font-size:20px;word-break:break-all;"><b>- 주요기능 :</b> ERP 영업관리 프로세스
 								<br><b>- 팀원수 :</b> 5명
 								<br><b>- 기여도 및 담당업무 :</b> 60%, PM을 맡아 소통을 통해 팀원들의 역할 조정과 기한 엄수를 하였고, 영업관리 프로세스 중 매출 관리 부분을 맡아 등록된 수주 목록을 불러와 매출로 분류하여 세금 계산서와 그래프로 매출 기록을 나타내는 부분을 담당
